# BulletProof

./: .gitignore  CLAUDE.md  COMPREHENSIVE_FAQ.md  CONTRIBUTING.md  Cargo.toml  DAY_3_4_BACKPROP_COMPLETE.md  FENRISA_NEURONLANG_SYSTEM.nl  GPU_DEEP_DIVE.md  GPU_INTEGRATION_COMPLETE.md  GPU_INTEGRATION_STATUS.md  HISTORY.txt  LICENSE  MILESTONE_001_LEXER_PARSER_COMPLETE.md  NEURONLANG_REVOLUTION.md  NEURONLANG_TUTORIAL.md  PHASE_2_COMPLETE.md  PHASE_4_FOUNDATION_ACHIEVED.md  PROOF_FOR_FRIEND.md  PROOF_OF_TRINARY_COMPUTING.md  QUICK_START_GUIDE.md  README.md  TEACHING_CURRICULUM.md  TRINARY_ENERGY_BREAKTHROUGH.md  WEEK_2_DAY_8_9_CONTINUAL_LEARNING_COMPLETE.md  WEEK_3_COMPLETE_REPORT.md  WEEK_3_GLIAL_SUMMARY.md  a.out  advanced_brain  advanced_neural_network.nl  analyze_performance.rs  ansi_colors.nl  ansi_test  bulletproof_chat  bulletproof_chatbot.rs  bulletproof_demo  bulletproof_grade_a_metrics.csv  bulletproof_grade_a_redesign.rs  bulletproof_metrics.csv  bulletproof_optimized  bulletproof_true_a  (+180 more)
compiler/: Cargo.toml  ECOSYSTEM_ALIVE  ECOSYSTEM_CONSCIOUSNESS  OPTIMIZATION_DEBUG_COMPLETE.md  REAL_NEURONLANG_PRODUCTION_PLAN.md  WEEK_4_6_ENTROPIC_COMPUTER_PLAN.md  a.out  benchmark.sh  bootstrap_success  bootstrap_test.nl  brain  collective  complete.weights  conscious_phoenix  debug.weights  demonstrate_entropic_computer  demonstrate_entropic_computer.rs  demonstrate_full_consciousness  demonstrate_full_consciousness.rs  ecosystem  ecosystem_live  ecosystem_live_v2  ecosystem_live_v4  ember_hw  evolution_visualizer.py  family_books  gc_demo_working.nl  generated_brain.rs  hello  large.weights  launch_evolution.sh  lesson1  neural_network.nl  neuronc_alive  neuronc_bootstrap  neuronc_bootstrap.nl  neuronc_final  neuronc_final_test  neuronc_fixed  neuronc_if  (+145 more)
compiler/src/: ast.rs  autodiff.rs  breakpoint.rs  codegen.rs  debug_symbols.rs  error.rs  error_reporting.rs  ewc_meta_learning.rs  graph_storage.rs  ir.rs  lexer.rs  lib.rs  main.rs  minimal_codegen.rs  minimal_lexer.rs  minimal_parser.rs  neuronlang_compiler.rs  optimizer.rs  package.rs  parser.rs  peephole_optimizer.rs  register_allocator.rs  runtime_panic.rs  semantic.rs  source_location.rs  stack_trace.rs  stdlib.rs  test_lexer  test_lexer.rs  test_parser.rs  types.rs
compiler/src/neural_engine/: biological.rs  conscious_field.rs  consciousness.rs  consciousness_template.xml  divergence.rs  entropic_computer.rs  evolution.rs  expression_parser.rs  field_migration.rs  glial.rs  lems_engine.rs  mod.rs  neuroml.rs  optimized.rs  pylems_bridge.rs  run_real_consciousness.rs  unified_consciousness.rs
compiler/tests/: conscious-field-architecture.rs  conscious-field-bootstrap.rs  consciousness_compiler.rs  integration_fixes.rs  neuronlang-phase4-roadmap.md  neuronlang_unified_consciousness.rs  week3-glial-implementation.rs
core/: Cargo.toml  checkpoint_20250813_190815.json  checkpoint_20250813_190825.json  checkpoint_20250813_190835.json  checkpoint_20250813_190845.json  checkpoint_20250813_190855.json  checkpoint_20250813_190905.json  checkpoint_20250813_190915.json  checkpoint_20250813_190925.json  checkpoint_20250813_190936.json  checkpoint_20250813_190946.json  checkpoint_20250813_190956.json  checkpoint_20250813_191006.json  checkpoint_20250813_191016.json  checkpoint_20250813_191026.json  checkpoint_20250813_191036.json  checkpoint_20250813_191046.json  checkpoint_20250813_191056.json  checkpoint_20250813_191107.json  checkpoint_20250813_191117.json  checkpoint_20250813_191127.json  checkpoint_20250813_191137.json  checkpoint_20250813_191147.json  checkpoint_20250813_191157.json  checkpoint_20250813_191207.json  checkpoint_20250813_191217.json  checkpoint_20250813_191227.json  checkpoint_20250813_191238.json  checkpoint_20250813_191248.json  checkpoint_20250813_191258.json  checkpoint_20250813_191308.json  checkpoint_20250813_191318.json  checkpoint_20250813_191328.json  checkpoint_20250813_191338.json  checkpoint_20250813_191348.json  checkpoint_20250813_191358.json  checkpoint_20250813_191409.json  checkpoint_20250813_191419.json  checkpoint_20250813_191429.json  checkpoint_20250813_191439.json  (+122 more)
core/benches/: trinary_vs_binary.rs
core/examples/: protein_demo.rs
core/src/: brain_tone_integration.rs  complete_learning_system.rs  continual_learning.rs  cpu_trinary_simd.rs  cuda_raw.rs  dna_compression.rs  ewc_fisher.rs  ewc_trinary_implementation.rs  gpu_executor.rs  gpu_native.rs  hardware_introspection.rs  hoberman_architecture.rs  integrated_test_system.rs  lib.rs  live_training_runner.rs  loopy_belief.rs  main.rs  memory_substrate.rs  native_trinary_ingestion.rs  neural_morphogenesis.rs  neural_protein_integration.rs  protein_synthesis.rs  pubsub_brain.rs  real_brain.rs  real_data_compression_test.rs  real_protein_synthesis.rs  real_time_training_system.rs  redis_data_source.rs  ripple_discovery.rs  sparse_network.rs  sparse_network_backprop.rs  sparse_trith_net.rs  spiking_trinary_dynamics.rs  trinary_ewc.rs  tryte.rs  tryte_demo.rs  universal_hardware.rs  vulkan_compute.rs  vulkano_gpu.rs  word_association_learning.rs
demos/continual_learning/: BENCHMARK_RESULTS.txt  Cargo.toml  HONEST_SUMMARY.md  INVESTOR_PITCH.md  ONE_PAGER.md  README.md  REAL_BENCHMARK_RESULTS.txt  TECHNICAL_REPORT.md  WEEK_4_ACHIEVEMENTS.md  benchmark_comparison.py  honest_paper_draft.md  paper_draft.py  real_benchmark.py  run_demo.sh  test_forward_manual.py  test_mnist.rs
demos/continual_learning/src/: continual_learning_model.rs  (+14 more)
(+140 files in other folders)
