[package]
name = "neuronlang_project"
version = "1.0.0"
edition = "2021"
authors = ["Fenrisa Team"]
description = "Revolutionary Trinary Neural Computing System"

[[bin]]
name = "neuronlang_executor"
path = "src/bin/neuronlang_executor.rs"

[[bin]]
name = "proper-training"
path = "src/bin/proper-training.rs"

[[bin]]
name = "simple-training"
path = "src/bin/simple-training.rs"

[[bin]]
name = "test_ewc_forgetting"
path = "test_ewc_forgetting.rs"

[[bin]]
name = "test_continual_learning"
path = "test_continual_learning.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# CUDA GPU support (optional - will be enabled later)
cudarc = { version = "0.12", features = ["driver", "cuda-12060"], optional = true }

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling  
anyhow = "1.0"
thiserror = "1.0"

# Math and arrays
ndarray = "0.16"
rand = "0.8"
half = "2.4"

# Utilities
once_cell = "1.19"
dashmap = "6.0"
futures = "0.3"
crossbeam = "0.8"
sysinfo = "0.31"
fastrand = "2.0"
num_cpus = "1.16"
bincode = "1.3"
libc = "0.2"
ash = { version = "0.38", optional = true }  # For Vulkan (optional - will be enabled later)
vulkano = { version = "0.34", optional = true }
vulkano-shaders = { version = "0.34", optional = true }

[lib]
name = "neuronlang_project"
path = "core/src/lib.rs"

[features]
default = []
cuda = ["cudarc", "ash"]
vulkano = ["dep:vulkano", "dep:vulkano-shaders"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1