[package]
name = "neuronlang"
version = "0.1.0"
edition = "2021"
authors = ["Fenrisa Team"]
description = "The world's first trinary neural programming language - NO LLVM!"

[dependencies]
# Our compilation path: .nl → Rust → Native binary
# NO LLVM, NO intermediates - direct compilation!
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tempfile = "3.8"

# Neural engine dependencies
ordered-float = "4.2"
rayon = "1.10"

[[bin]]
name = "neuronc"
path = "src/main.rs"

[lib]
name = "neuronlang_compiler"
path = "src/lib.rs"